--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswith(\"c\") # False"
+    "\"art.vandelay@vandelay.co\".endswith(\"com\") # False"
    ]
   },
   {
@@ -287,7 +287,7 @@
     }
    ],
    "source": [
-    "\"www.\"+'vandelay.com' # 'www.vandelay.com'"
+    " # 'www.vandelay.com'"
    ]
   },
   {
