Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
     {
      "data": {
       "text/plain": [
-       "'www.vandelay.com'"
+       "'wwwwvandelay.com'"
       ]
      },
      "execution_count": 7,
@@ -287,7 +287,7 @@
     }
    ],
    "source": [
-    "\"wwww\"+\"vandela\" # 'www.vandelay.com'"
+    "\"wwww\"+\"vandelay.com\" # 'www.vandelay.com'"
    ]
   },
   {
